--- a/src/index.scss
+++ b/src/index.scss
@@ -18,23 +18,27 @@ body {
 //     monospace;
 // }
 .container{
-  width: 100%;
+  width: 150%;
 }
+
 .wrapper{
   width:100%;
   // margin-left: auto;
   // margin-right: auto;
+  display: grid;
   margin-top: 50vh;
   margin-left: 50%;
   transform: translate(-50%,-50%);
   padding:20px 0;
 }
-
+body{
+  background-color: rgb(196, 109, 109);
+ 
+}
 
 .filter-bar{
   width:100%;
   display: flex;
-  height:50px;
   .filter{
     border:1px solid black;
     margin-right: 20px;
@@ -111,7 +115,7 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  //min-height: 100vh;
   text-align: center;
 }
 #chart{
