--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#sequence{
+  margin-top: -10em;
+}
+#toppy{
+  width:126%;
+  margin-left: -29%;
+}
 // code {
 //   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 //     monospace;
@@ -31,11 +37,17 @@ body {
   transform: translate(-50%,-50%);
   padding:20px 0;
 }
-body{
-  background-color: rgb(196, 109, 109);
- 
+*{
+  text-align: left;
+  justify-content: center;
 }
-
+body{
+  width:100%;
+  height:100%;
+}
+.top{
+  position:relative; left:80px;
+}
 .filter-bar{
   width:100%;
   display: flex;
@@ -58,7 +70,36 @@ body{
     }
   }
 }
+.yellowed{
+  background-color: rgb(210, 212, 63);
+}
+.oranged{
+  background-color: rgba(199, 93, 55, 0.863);
+}
+.greened{
+  background-color: green;
+}
+.red{
+  background-color: red;
+}
+.slice {
+  cursor: pointer;
+}
 
+.slice .main-arc {
+  stroke: #fff;
+  stroke-width: 1px;
+}
+
+.slice .hidden-arc {
+  fill: none;
+}
+
+.slice text {
+  pointer-events: none;
+  dominant-baseline: middle;
+  text-anchor: middle;
+}
 
 .main-wrapper{
   display: grid;
@@ -111,20 +152,18 @@ body{
                  -5px -5px 28px #ffffff;
   }
 }
-
 body {
-  display: flex;
+  display: flexbox;
   flex-direction: column;
+  font-family: cursive;
   //min-height: 100vh;
   text-align: center;
+  font-family: Sans-serif;
+  font-size: 11px;
 }
-#chart{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+*>#chart{
+font-size: 5px;
 }
-
 #my_dataviz{
   svg text{
     font-size: 14px;
