--- a/src/index.scss
+++ b/src/index.scss
@@ -42,11 +42,13 @@ body {
 }
 *{
   text-align: left;
-  justify-content: center;
+  justify-content: space-around;
 }
 body{
   width:100%;
   height:100%;
+  text-align: left;
+  justify-content: space-around;
 }
 .top{
   position:relative; left:80px;
