fix sunburst click filter

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#viz{
+  font-size: 10px;
+}
 #sequence{
   margin-top: -10em;
 }
